--- a/Case_study1_EDA.ipynb
+++ b/Case_study1_EDA.ipynb
@@ -9,7 +9,9 @@
         "rPRYmukKSVFK",
         "BcYdgWT8Pgu_"
       ],
-      "toc_visible": true
+      "mount_file_id": "1BImwVjg4j65Ghb5p2qkY5dh4fHBusgex",
+      "authorship_tag": "ABX9TyOly3f87qH9CshcHNVdLeOw",
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
@@ -20,6 +22,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/paarthSalunke/Mercedes-Benz-Greener-manufacturing/blob/main/Case_study1_EDA.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
